fixing banner on mobile response

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -7,6 +7,10 @@ body{
 #landing{
     height: 100vh;
 }
+.projectImage{
+    max-height: 200px;
+    max-width: 400px;
+}
 #banner{
     height: fit-content;
     width: 50%;
@@ -14,6 +18,7 @@ body{
     padding: 20px 30px;
     border-radius: 10%;
     background-color: black;
+    opacity: 75%;
     z-index: 99;
 }
 .hoverText{
@@ -98,7 +103,8 @@ textarea{
     width: 99%;
 }
 .projectHead{
-    padding-bottom: 40px;
+    padding-top: 10px;
+    padding-bottom: 10px;
     border-bottom: 2px solid black;
     margin-bottom: 10px;
 }
@@ -124,6 +130,8 @@ h3{
 @media screen and (max-width: 600px){
     #banner{
         margin: 10vh auto;
+        width:90%;
+        
     }
 }
 
